# ReadKakao

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: label_map.json  label_map_emotion.json
app/src/main/cpp/: CMakeLists.txt  spm_jni.cpp
app/src/main/java/com/readkakaotalk/app/activity/: MainActivity.java  ResultActivity.java  SettingsActivity.java
app/src/main/java/com/readkakaotalk/app/model/: OnnxModelManager.java  TfLiteModelManager.java  TorchModelManager.java
app/src/main/java/com/readkakaotalk/app/service/: ApiService.java  MyAccessibilityService.java  MyNotificationService.java  RetrofitClient.java
app/src/main/java/com/readkakaotalk/app/tokenizer/: EncodedInput.java  SpmEncoder.java
app/src/main/java/org/sentencepiece/: SentencePieceProcessor.java
app/src/main/res/drawable/: ic_warning.xml  rounded_button.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
